--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -28,7 +28,7 @@ paginate: 5
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://zapodot.github.io
+production_url : http://zapodot.org/blog/
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
